# ntpmon

./: .gitignore  ntp-monitor.cabal  ntpmon.cabal
app/: Main.hs
src/: Main.hs  Win32Compat.hs
src/Data/: NTP.hs
src/Network/: NTP.hs
src/Network/NTP/: Config.hs  ConfigFinder.hs  Packet.hs  Types.hs
src/System/: Clock.hs  Counter.hs  Win32File.hs
src/Text/: PrefixSI.hs
static/: index.html
tst/: TestMain.hs
