name:                ntp-monitor
version:             0.3
synopsis:            Monitors NTP servers
license:             BSD3
license-file:        LICENSE
author:              Jacob Stanley
maintainer:          Jacob Stanley <jacob@stanley.io>
copyright:           Jacob Stanley (c) 2012
category:            Network
build-type:          Simple
Cabal-version:       >= 1.6

flag tsc
  default: False
  description: Force the use of RDTSC on Windows

executable ntp-monitor
  main-is: Main.hs
  hs-source-dirs: src

  build-depends:
      base              == 4.*
    , bytestring        == 0.9.*
    , cereal            == 0.3.*
    , mtl               == 2.0.*
    , network           == 2.3.*
    , old-locale        == 1.0.*
    , statistics        == 0.10.*
    , statistics-linreg == 0.2.*
    , time              == 1.4.*
    , transformers      == 0.2.*
    , vector            == 0.9.*

  if os(windows) && !flag(tsc)
    build-depends: Win32 == 2.2.*
    cpp-options: -DQPC
  else
    build-depends: rdtsc-bsd == 0.1.*

  ghc-prof-options:
    -fprof-auto

  ghc-options:
    -O2 -Wall -rtsopts
    -funbox-strict-fields
    -fno-warn-unused-do-bind
    -fno-warn-orphans
    -fwarn-tabs
