name:                ntpmon
version:             0.5
synopsis:            Monitors NTP servers
license:             BSD3
license-file:        LICENSE
author:              Jacob Stanley
maintainer:          Jacob Stanley <jacob@stanley.io>
copyright:           Jacob Stanley (c) 2012
category:            Network
build-type:          Simple
Cabal-version:       >= 1.6

flag tsc
  default: False
  description: Force the use of RDTSC on Windows

executable ntpmon
  main-is: Main.hs
  hs-source-dirs: src

  build-depends:
      base              == 4.*
    , aeson             == 0.6.*
    , blaze-builder     == 0.3.*
    , bytestring        == 0.9.*
    , cereal            == 0.3.*
    , filepath          == 1.3.*
    , http-types        == 0.6.*
    , monad-loops       == 0.3.*
    , mtl               == 2.0.*
    , network           == 2.3.*
    , old-locale        == 1.0.*
    , statistics        == 0.10.*
    , statistics-linreg == 0.2.*
    , stm               == 2.3.*
    , text              == 0.11.*
    , time              == 1.4.*
    , transformers      == 0.2.*
    , vector            == 0.9.*
    , wai               == 1.2.*
    , wai-app-static    == 1.2.*
    , wai-extra         == 1.2.*
    , warp              == 1.2.*

  if os(windows) && !flag(tsc)
    build-depends: Win32 == 2.2.*
    cpp-options: -DQPC
  else
    build-depends: rdtsc == 1.3.*

  ghc-prof-options:
    -fprof-auto

  ghc-options:
    -O2 -Wall -rtsopts -threaded
    -funbox-strict-fields
    -fno-warn-unused-do-bind
    -fno-warn-orphans
    -fwarn-tabs
