name:                ntpmon
version:             0.5
synopsis:            Monitors NTP servers
license:             BSD3
license-file:        LICENSE
author:              Jacob Stanley
maintainer:          Jacob Stanley <jacob@stanley.io>
copyright:           Jacob Stanley (c) 2012
category:            Network
build-type:          Simple
cabal-version:       >= 1.9.2

flag tsc
  default: False
  description: Force the use of RDTSC on Windows

library
  hs-source-dirs: src
  exposed-modules:
    Network.NTP
    Network.NTP.Types
    Network.NTP.Config
    Network.NTP.ConfigFinder
    System.Counter
    System.Win32File
    Text.PrefixSI

  build-depends:
      base               == 4.*
    , bytestring         == 0.9.*
    , cereal             == 0.3.*
    , directory          >= 1.1.0.2 && < 1.2
    , filepath           == 1.3.*
    , monad-loops        == 0.3.*
    , mtl                == 2.0.*
    , network            == 2.3.*
    , statistics         == 0.10.*
    , statistics-linreg  == 0.2.*
    , stm                == 2.3.*
    , text               == 0.11.*
    , time               == 1.4.*
    , transformers       == 0.2.*
    , vector             == 0.9.*

  if os(windows) && !flag(tsc)
    build-depends: Win32 == 2.2.*
    cpp-options: -DQPC
  else
    build-depends: rdtsc == 1.3.*

  ghc-options:
    -O2 -Wall
    -funbox-strict-fields
    -fwarn-tabs

executable ntpmon
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
      ntpmon
    , base               == 4.*
    , aeson              == 0.6.*
    , attoparsec-conduit == 0.4.*
    , blaze-builder      == 0.3.*
    , bytestring         == 0.9.*
    , conduit            == 0.4.*
    , http-types         == 0.6.*
    , mtl                == 2.0.*
    , network            == 2.3.*
    , old-locale         == 1.0.*
    , stm                == 2.3.*
    , text               == 0.11.*
    , time               == 1.4.*
    , transformers       == 0.2.*
    , vector             == 0.9.*
    , wai                == 1.2.*
    , wai-app-static     == 1.2.*
    , wai-extra          == 1.2.*
    , warp               == 1.2.*

  ghc-prof-options:
    -fprof-auto

  ghc-options:
    -O2 -Wall -rtsopts -threaded
    -funbox-strict-fields
    -fwarn-tabs

test-suite test-ntpmon
  type: exitcode-stdio-1.0
  main-is: TestMain.hs
  hs-source-dirs: tst
  build-depends:
      ntpmon
    , base                       == 4.*
    , QuickCheck                 == 2.4.*
    , test-framework             == 0.6.*
    , test-framework-quickcheck2 == 0.2.*
